--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
 
 
     <!-- sliders -->
-    <!-- <section class="s">
+     <section class="s">
         <div class="slider">
-            <div class="slides"> -->
+            <div class="slides"> 
 
                 <!-- radio button start-->
-                <!-- <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio1">
                 <input type="radio" name="radio-btn" id="radio2">
                 <input type="radio" name="radio-btn" id="radio3">
-                <input type="radio" name="radio-btn" id="radio4"> -->
+                <input type="radio" name="radio-btn" id="radio4">
                 <!-- radio button end -->
 
                 <!-- slide images start-->
-                <!-- <div class="slide first">
+                 <div class="slide first">
                     <img src="Instagram.jpg" alt="">
-                </div>
+                </div> 
 
                 <div class="slide">
                     <img src="kurti.jpg" alt="">
@@ -82,30 +82,30 @@
 
                 <div class="slide">
                     <img src="t-shirt5.jpg" alt="">
-                </div> -->
+                </div>
                 <!-- slide image end -->
 
                 <!-- automatic navigation start -->
-                <!-- <div class="navigation-auto">
+                <div class="navigation-auto">
                     <div class="auto-btn1"></div>
                     <div class="auto-btn2"></div>
                     <div class="auto-btn3"></div>
-                    <div class="auto-btn4"></div> -->
+                    <div class="auto-btn4"></div>
                     <!-- automatic navigation end -->
-                <!-- </div>
+                </div>
 
-            </div> -->
+            </div>
 
             <!-- manual navigation start -->
-            <!-- <div class="navigation-manual">
+            <div class="navigation-manual">
                 <label for="radio1" class="manual-btn"></label>
                 <label for="radio2" class="manual-btn"></label>
                 <label for="radio3" class="manual-btn"></label>
                 <label for="radio4" class="manual-btn"></label>
-            </div> -->
+            </div>
             <!-- manual navigation end -->
 
-        <!-- </div>
+        </div>
     </section>
 
     <script type="text/javascript">
@@ -118,11 +118,11 @@
             }
         }, 5000);
 
-    </script> -->
+    </script> 
     <h1 class="heading" style="margin-top: 100px; font-size: 500%;">Our <span>Art Gallery</span>
     </h1>
 
-
+<!-- 
     <div class="slider1" class="slider2">
         <span style="--i:1;"><img src="kurti.jpg"></span>
         <span style="--i:2;"><img src="pants1.jpg"></span>
@@ -132,7 +132,7 @@
         <span style="--i:6;"><img src="shorts3.jpg"></span>
         <span style="--i:7;"><img src="accessories8.jpg"></span>
         <span style="--i:8;"><img src="accessories2.jpg"></span>
-    </div>
+    </div> -->
 
 
 
