--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                 <div class="slide">
                     <img src="t-shirt5.jpg" alt="">
                 </div>
+                
+                <div class="slide">
+                    <img src="pants1.jpg" alt="">
+                </div>
                 <!-- slide image end -->
 
                 <!-- automatic navigation start -->
@@ -115,7 +119,7 @@
         setInterval(function () {
             document.getElementById('radio' + counter).checked = true;
             counter++;
-            if (counter > 4) {
+            if (counter > 5) {
                 counter = 1;
             }
         }, 5000);
